--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -137,59 +137,3 @@
   border-radius: 50%;
   background: var(--input-color);
 }
-
-.rebroadcast-button-container,
-.abandon-button-container {
-  width: 815px;
-}
-
-.rebroadcast-button {
-  background-image: var(--rebroadcast-transaction-icon);
-  background-position: 20px 12px;
-  background-size: 20px;
-  background-repeat: no-repeat;
-  padding-left: 48px;
-  float: right;
-  margin-top: -22px;
-}
-
-.abandon-button {
-  float: right;
-  margin-top: -22px;
-  margin-right: 20px;
-}
-
-@media screen and (max-width: 1179px) {
-  .rebroadcast-button-container,
-  .abandon-button-container {
-    width: 770px;
-  }
-}
-
-@media screen and (max-width: 1106px) {
-  .rebroadcast-button-container,
-  .abandon-button-container {
-    width: 670px;
-  }
-
-  .abandon-button-container {
-    width: 670px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .rebroadcast-button-container,
-  .abandon-button-container {
-    width: 375px;
-    text-align: center;
-    display: block;
-    margin-top: -22px;
-
-    .rebroadcast-button,
-    .abandon-button {
-      float: none;
-      padding: 12px 30px 14px 48px;
-      margin-top: 0;
-    }
-  }
-}
